@@ -921,6 +921,7 @@ static SyscallTableEntry syscall_main_table[] = {
    LINXY (__NR_timerfd_settime, sys_timerfd_settime),
    LINXY (__NR_newfstatat, sys_newfstatat),
    LINXY (__NR_prlimit64, sys_prlimit64),
+   LINXY (__NR_clock_adjtime, sys_clock_adjtime),
    LINXY (__NR_process_vm_readv, sys_process_vm_readv),
    LINX_ (__NR_process_vm_writev, sys_process_vm_writev)
 };
